# lesson_27_homework

./: db.sqlite3  manage.py  pyproject.toml  pytests.ini  test.py
ads/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_category_name.py  0002_alter_category_slug.py  0002_selection.py  0003_alter_ad_description_alter_ad_name_alter_ad_price.py  0003_alter_ad_options_alter_category_options_and_more.py  0003_rename_author_selection_owner.py  0004_alter_ad_description.py  0004_alter_ad_is_published.py
ads/urls/: ads.py  categories.py
ads/views/: ad.py  category.py  selection.py
datasets/: category.json  csv_to_json.py  user.json
lesson_27_homework/: asgi.py  settings.py  urls.py  wsgi.py
lesson_28_homework/: asgi.py  settings.py  urls.py  wsgi.py
lesson_30_homework/: asgi.py  settings.py  urls.py  wsgi.py
lesson_31_homework/: asgi.py  settings.py  urls.py  wsgi.py
tests/: factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ad_list_test.py  selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_location_options_alter_user_options.py  0004_alter_user_options_rename_location_id_user_locations.py  0005_alter_user_options_alter_user_managers_and_more.py  0006_user_birth_date_alter_user_email.py  0007_alter_user_email.py  0008_alter_user_email.py  0009_alter_user_email.py  0010_alter_user_age.py
